fix: fix alignment in topnav bar

--- a/css/theme-gravitee_new.css
+++ b/css/theme-gravitee_new.css
@@ -17,11 +17,6 @@ body {
     color: #111c4e;
 }
 
-.navbar-brand img {
-    height: 30px;
-    margin-left: 100px;
-}
-
 .summary {
     text-align: right;
     padding-right: 10px;
